--- a/assets/css/beranda-style.scss
+++ b/assets/css/beranda-style.scss
@@ -58,15 +58,16 @@ h2:before, h2:after {
   background-color: white;
   border:10px;
   .navbar-nav>li>a.active{
-    color: cyan;
+    color: #9c39f9;
   }
   .navbar-nav>li>a{
     font-size:13px;
-    font-weight: 600;
+    font-weight: 800;
     color:#444;
     &:hover{
       background-color: inherit;
-      color: cyan;
+      color: #9c39f9;
+      font-weight: 800;
     }
   }
   .navbar-toggle {
@@ -85,16 +86,16 @@ h2:before, h2:after {
   background: none;
   border:none;
   .navbar-nav>li>a.active{
-    color: cyan;
+    color: #9c39f9;
   }
   .navbar-nav>li>a{
       color: white;
       font-size: 13px;
-      font-weight: 600;
+      font-weight: 800;
 
       &:hover{
         background-color: inherit;
-        color: cyan;
+        color: #9c39f9;
       }
   }
   .navbar-toggle {
@@ -119,21 +120,25 @@ h2:before, h2:after {
 .carousel-inner {
 
   .img1{
-    background: url("../../img/lul1.jpg") no-repeat center center fixed;
+    background: url("../../img/slider/slide1.jpg") no-repeat center center fixed;
   }
   .img2{
-    background: url("../../img/lul2.jpg") no-repeat center center fixed;
+    background: url("../../img/slider/lul2.jpg") no-repeat center center fixed;
   }
   .img3{
-    background: url("../../img/lul3.jpg") no-repeat center center fixed;
+    background: url("../../img/slider/lul3.jpg") no-repeat center center fixed;
   }
   .item{
-    height: 450px;
     max-width: 100%;
     background-size: cover;
     background-attachment: fixed;
   }
 
+}
+.slider{
+  .item{
+    min-height: 677px;
+  }
 }
 .body-text {
   position: relative;
@@ -154,10 +159,148 @@ h2:before, h2:after {
     line-height: 2rem;
   }
 }
-
-
-
 //------------------------------------------------------------------------------
+
+// INNER CAROUSEL---------------------------------------------------------------
+.intro{
+  width:100%;
+  display:table;
+  height:auto;
+  padding:100px 0;
+  text-align:center;
+  color:#fff;
+}
+.intro .intro-body{
+  display:table-cell;
+  vertical-align:middle;
+}
+.intro-body .brand-heading{
+  font-size:40px;
+}
+.intro-body .intro-text{
+  font-size:18px;
+}
+@media (min-width:768px){
+  .intro{
+    height:100%;
+    padding:0;
+  }
+  .intro .intro-body .brand-heading{
+    font-size:100px;
+  }
+  .intro .intro-body .intro-text{
+    font-size:26px;
+  }
+}
+.btn-circle{
+  width:70px;
+  height:70px;
+  margin-top:15px;
+  padding:7px 16px;
+  border:2px solid #fff;
+  border-radius:100%!important;
+  font-size:40px;color:#fff;
+  background:0 0;
+  -webkit-transition:background .3s ease-in-out;
+  -moz-transition:background .3s ease-in-out;
+  transition:background .3s ease-in-out;
+}
+.btn-circle:focus,.btn-circle:hover{
+  outline:0;
+  color:#fff;
+  background:rgba(255,255,255,.1);
+}
+.btn-circle i.animated{
+  -webkit-transition-property:-webkit-transform;
+  -webkit-transition-duration:1s;
+  -moz-transition-property:-moz-transform;
+  -moz-transition-duration:1s;
+}
+.btn-circle:hover i.animated{
+  -webkit-animation-name:pulse;
+  -moz-animation-name:pulse;
+  -webkit-animation-duration:1.5s;
+  -moz-animation-duration:1.5s;
+  -webkit-animation-iteration-count:infinite;
+  -moz-animation-iteration-count:infinite;
+  -webkit-animation-timing-function:linear;
+  -moz-animation-timing-function:linear;
+}
+@-webkit-keyframes pulse{
+  0%,100%{
+    -webkit-transform:scale(1);
+    transform:scale(1);
+  }
+  50%{
+    -webkit-transform:scale(1.2);
+    transform:scale(1.2);
+  }
+}
+@-moz-keyframes pulse{
+  0%,100%{
+    -moz-transform:scale(1);
+    transform:scale(1);
+  }
+  50%{
+    -moz-transform:scale(1.2);
+    transform:scale(1.2);
+  }
+}
+//------------------------------------------------------------------------------
+
+// TESTIMONI--------------------------------------------------------------------
+.testimonial{
+  padding-top: 50px;
+  padding-bottom:50px;
+  h1{
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  .lead{
+    line-height: 2em;
+    margin-bottom: 10px
+  }
+  span{
+    font-size: 18px;
+    font-weight: bold;
+    color:#9c39f9;
+  }
+  .testi{
+    min-height: 100px;
+  }
+  .carousel-indicators{
+    position: static;
+    width: 100%;
+    margin-left: auto;
+    padding-top: 20px;
+
+    li{
+        text-indent: 0;
+        width: 80px;
+        height: 80px;
+        opacity: 0.4;
+        border-radius: 50%;
+        overflow: hidden;
+        margin: 5px;
+        -o-transition: all 0.5s ease;
+    		-moz-transition: all 0.5s ease;
+    		-ms-transition: all 0.5s ease;
+    		-webkit-transition: all 0.5s ease;
+    		transition: all 0.5s ease;
+
+
+        img{
+          max-width: 100%;
+        }
+    }
+    .active{
+      opacity: 1;
+      background: none;
+      border: 3px solid #9c39f9;
+    }
+  }
+
+}
 
 // GALERI-----------------------------------------------------------------------
 .col-md-4, .col-sm-6{
@@ -168,14 +311,14 @@ h2:before, h2:after {
 
 .img-wrapper
 {
-  border-radius: 0.5em;
   align-items:center;
+  height: 255;
+  width: 100%;
   //position: relative;
   display: block;
   overflow: hidden;
   .overlay{
-    border-radius: 0.5em;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.5);
     position: absolute;
     left: 15;
     top: 0;
@@ -198,8 +341,13 @@ h2:before, h2:after {
   &:hover{
     .overlay{
       opacity: 1;
+      h4{
+        color: #fff;
+      }
     }
     img{
+      height: 255;
+      width: 100%;
       box-shadow: 0 0 7px rgba(0,0,0, 0.5);
       transition: all .3s ease-in-out;
       transform: scale(1.5) rotate(5deg);
@@ -352,7 +500,7 @@ h2:before, h2:after {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background: #ba05a8;
+    background: #9c39f9;
     background: rgba(0, 0, 0, 0.7);
     width: 50px;
     height: 50px;
@@ -381,11 +529,47 @@ h2:before, h2:after {
     transition: all 0.3s ease;
 }
 #return-to-top:hover {
-    background: rgba(186, 5, 168,0.9);
+    background: #9c39f9;
 }
 #return-to-top:hover i {
     color: #fff;
     top: 5px;
+}
+//------------------------------------------------------------------------------
+
+// BLOG-------------------------------------------------------------------------
+
+.judul-blog{
+  margin-bottom: 5px;
+  font-size: 40px;
+  color: red;
+  font-weight: bold;
+}
+.img-article{
+  max-height:400px;
+  margin: 0 auto;
+}
+.blog-post{
+  margin-top: 20px;
+  p{
+    margin-left: 70px;
+    margin-right: 70px;
+  }
+}
+.blog-main{
+  padding-bottom: 10px;
+}
+.bordered:after{
+  content:'';
+  display:block;
+  width:80%;
+  position:absolute;
+  bottom:0;
+  left:50%;
+  margin-left:-40%;
+  height:3px;
+  background:-webkit-radial-gradient(center, ellipse, rgba(0,0,0,0.2) 0, rgba(255,255,255,0) 75%);
+  background:radial-gradient(ellipse at center, rgba(0,0,0,0.2) 0, rgba(255,255,255,0) 75%);
 }
 //------------------------------------------------------------------------------
 
