--- a/assets/css/beranda-style.scss
+++ b/assets/css/beranda-style.scss
@@ -1,14 +1,18 @@
 //GENERAL-----------------------------------------------------------------------
+$warnaUngu : #ac59f9;
 .container{
     min-width: 90%;
   //margin: auto;
 }
 .garis:after{
+  padding-bottom: 5px;
+
   content: '';
   display: block;
   margin:auto;
-  width: 40px;
-  border-top: 2px solid #444;
+  height: 4px;
+  width: 120px;
+  border-bottom: 2px solid #444;
 }
 .body{
   background: #eee ;font-family: 'Open Sans', sans-serif;
@@ -38,6 +42,19 @@ h2:before, h2:after {
   background-size: 1px 1px;
 }
 .row {
+  span{
+    font-weight: 800;
+  }
+  p{
+    font-size: 2em;
+  }
+}
+.col{
+ height: 300px;
+}
+
+.cell{
+  //vertical-align: middle;
 }
 //------------------------------------------------------------------------------
 
@@ -57,7 +74,7 @@ h2:before, h2:after {
   background-color: white;
   border:10px;
   .navbar-nav>li>a.active{
-    color: #9c39f9;
+    color: $warnaUngu;
   }
   .navbar-nav>li>a{
     font-size:13px;
@@ -65,7 +82,7 @@ h2:before, h2:after {
     color:#444;
     &:hover{
       background-color: inherit;
-      color: #9c39f9;
+      color: $warnaUngu;
       font-weight: 800;
     }
   }
@@ -85,7 +102,7 @@ h2:before, h2:after {
   background: none;
   border:none;
   .navbar-nav>li>a.active{
-    color: #9c39f9;
+    color: $warnaUngu;
   }
   .navbar-nav>li>a{
       color: white;
@@ -94,7 +111,7 @@ h2:before, h2:after {
 
       &:hover{
         background-color: inherit;
-        color: #9c39f9;
+        color: $warnaUngu;
       }
   }
   .navbar-toggle {
@@ -121,10 +138,10 @@ h2:before, h2:after {
   width: 100%;
   display: table;
 }
-.carousel-inner {
 
+.carousel-inner {
   .img1{
-    background: url("../../img/slider/slide1.png") no-repeat center center fixed;
+    background: url("../../img/slider/slide1.jpg") no-repeat center center fixed;
   }
   .img2{
     background: url("../../img/slider/slide2.png") no-repeat center center fixed;
@@ -170,9 +187,10 @@ h2:before, h2:after {
 }
 //------------------------------------------------------------------------------
 
-// STATIC TEXT CAROUSEL---------------------------------------------------------------
+// STATIC TEXT CAROUSEL---------------------------------------------------------
 .intro{
-  width:100%;
+  width: 100%;
+  padding: 100px 0;
   display:table;
   height:auto;
   text-align:center;
@@ -182,6 +200,7 @@ h2:before, h2:after {
   z-index: 3;
 }
 .intro .intro-body{
+  padding-top: 100px;
   display:table-cell;
   vertical-align:middle;
 }
@@ -193,6 +212,7 @@ h2:before, h2:after {
 }
 @media (min-width:768px){
   .intro{
+    margin-top: 10px;
     height:100%;
     padding:0;
   }
@@ -203,14 +223,18 @@ h2:before, h2:after {
     font-size:26px;
   }
 }
+
 .btn-circle{
+  align-items:center;
+  align-content: center;
   width:70px;
   height:70px;
   margin-top:15px;
-  padding:7px 16px;
+  padding:16px 16px;
   border:2px solid #fff;
   border-radius:100%!important;
-  font-size:40px;color:#fff;
+  font-size:40px;
+  color:#fff;
   background:0 0;
   -webkit-transition:background .3s ease-in-out;
   -moz-transition:background .3s ease-in-out;
@@ -243,19 +267,22 @@ h2:before, h2:after {
     transform:scale(1);
   }
   50%{
-    -webkit-transform:scale(1.2);
-    transform:scale(1.2);
+    -webkit-transform:scale(5);
+    transform:scale(5);
   }
 }
-@-moz-keyframes pulse{
-  0%,100%{
-    -moz-transform:scale(1);
-    transform:scale(1);
-  }
-  50%{
-    -moz-transform:scale(1.2);
-    transform:scale(1.2);
-  }
+//------------------------------------------------------------------------------
+
+// MIDDLE PARALLAX--------------------------------------------------------------
+.parallax {
+height: 300px;
+background-attachment: fixed;
+background-size: cover;
+background-position: 70% 50%;
+}
+.paralsec1 {
+background-image: url("../../img/parallax-mid.jpg");
+height: 500px;
 }
 //------------------------------------------------------------------------------
 
@@ -274,7 +301,7 @@ h2:before, h2:after {
   span{
     font-size: 18px;
     font-weight: bold;
-    color:#9c39f9;
+    color:$warnaUngu;
   }
   .testi{
     min-height: 100px;
@@ -307,7 +334,7 @@ h2:before, h2:after {
     .active{
       opacity: 1;
       background: none;
-      border: 3px solid #9c39f9;
+      border: 3px solid $warnaUngu;
     }
   }
 
@@ -531,7 +558,7 @@ h2:before, h2:after {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background: #9c39f9;
+    background: $warnaUngu;
     background: rgba(0, 0, 0, 0.7);
     width: 50px;
     height: 50px;
@@ -560,7 +587,7 @@ h2:before, h2:after {
     transition: all 0.3s ease;
 }
 #return-to-top:hover {
-    background: #9c39f9;
+    background: $warnaUngu;
 }
 #return-to-top:hover i {
     color: #fff;
@@ -651,5 +678,12 @@ h2:before, h2:after {
   .container {
       width: 970px;
   }
+}
+@media only screen and (max-device-width: 1024px) {
+    .carousel-inner {
+      .item{
+        background-attachment: scroll;
+      }
+    }
 }
 //------------------------------------------------------------------------------
