--- a/assets/css/beranda-style.scss
+++ b/assets/css/beranda-style.scss
@@ -51,7 +51,8 @@ h2:before, h2:after {
   }
 }
 .col{
- height: 300px;
+  height: 400px;
+  vertical-align: middle;
 }
 
 .cell{
@@ -89,7 +90,13 @@ h2:before, h2:after {
 
 //------------------------------------------------------------------------------
 
-// LIHAT-GALERI ---------------------------------------------------------------------
+// LIHAT-GALERI ----------------------------------------------------------------
+.col-kunjungi-galeri{
+  padding-top: 50px;
+}
+*,*:before,*:after{
+  box-sizing: border-box;
+}
 .lihat-galeri{
   //height: 300px;
   p{
@@ -99,78 +106,52 @@ h2:before, h2:after {
   span{
       margin-top: 20px;
   }
-  /*.tombol {
-    color: $warnaUngu;
-    cursor: pointer;
-    display: block;
-    font-size:16px;
-    font-weight: 400;
-    line-height: 45px;
-    margin: 0 auto 2em;
-    max-width: 160px;
-    position: relative;
+  @mixin center {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  }
+  .tombol{
+    margin-top: 20px;
+    @include center;
+    //font-size: 0.8em;
     text-decoration: none;
-    vertical-align: middle;
-    width: 100%;
-  }
-  .btn-galeri {
-    border: 0 solid;
-    box-shadow: inset 0 0 20px rgba(172, 89, 249, 0);
-    outline: 1.5px solid;
-    outline-color: rgba(172, 89, 249, 0.5);
-    outline-offset: 0px;
-    text-shadow: none;
-    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-  }
-  .btn-galeri:hover {
-    transition-property: all;
-    transition-duration: .6s;
-    transition-timing-function: ease;
-    border: 1px solid;
-    box-shadow: inset 0 0 20px rgba(172, 89, 249, .5), 0 0 20px rgba(172, 89, 249, .2);
-    outline-color: rgba(172, 89, 249, 0);
-    outline-offset: 15px;
-    text-shadow: 1px 1px 2px $warnaUngu;
-  }
-
-  .btn-galeri {
-      letter-spacing: 0;
-  }
-
-  .btn-galeri:hover,
-  .btn-galeri:active {
-    letter-spacing: 5px;
-    transition-property: all;
-    transition-duration: .6s;
-    transition-timing-function: ease;
+    cursor: pointer;
+    border: 1px solid $warnaUngu;
+    border-radius: 8px;
+    height:2.8em;
+    width:10em;
+    padding: 0;
+    outline: none;
+    overflow: hidden;
+    color: $warnaUngu;
+    transition: color 0.3s 0.1s ease-out;
+    text-align: center;
+    line-height: 250%;
+    &::before{
+      @include center;
+      content:'';
+      border-radius: 50%;
+      display: block;
+      width: (10em*2);
+      height: (10em*2);
+      line-height: (10em*2);
+      left: -(10em/2);
+      text-align: center;
+      transition: box-shadow 0.5s ease-out;
+      z-index: -1;
+    }
+    &:hover{
+      color: #fff;
+      &::before{
+        box-shadow:inset 0 0 0 10em rgba($warnaUngu,1);
+      }
+    }
   }
 
-  .btn-galeri:after,
-  .btn-galeri:before {
-    backface-visibility: hidden;
-    border: 1px solid rgba(#fff, 0);
-    bottom: 0px;
-    content: " ";
-    display: block;
-    margin: 0 auto;
-    position: relative;
-    transition: all 280ms ease-in-out;
-    width: 0;
-  }
-
-  .btn-galeri:hover:after,
-  .btn-galeri:hover:before {
-    backface-visibility: hidden;
-    border-color: $warnaUngu;
-    transition: width 350ms ease-in-out;
-    width: 70%;
-  }
-
-  .btn-galeri:hover:before {
-    bottom: auto;
-    top: 0;
-    width: 70%;
-  }*/
 }
 //------------------------------------------------------------------------------
 
@@ -249,6 +230,53 @@ h2:before, h2:after {
 //------------------------------------------------------------------------------
 
 // CAROUSEL --------------------------------------------------------------------
+.carousel-fade .carousel-inner .item {
+  opacity: 0;
+  transition-property: opacity;
+    overflow:hidden;
+}
+.item.active img {
+    transition: transform 5000ms linear 0s;
+    /* This should be based on your carousel setting. For bs, it should be 5second*/
+    transform: scale(1.05, 1.05);
+}
+.carousel-fade .carousel-inner .active {
+  opacity: 1;
+}
+
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  left: 0;
+  opacity: 0;
+  z-index: 1;
+}
+
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+}
+
+@media all and (transform-3d), (-webkit-transform-3d) {
+    .carousel-fade .carousel-inner > .item.next,
+    .carousel-fade .carousel-inner > .item.active.right {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.prev,
+    .carousel-fade .carousel-inner > .item.active.left {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.next.left,
+    .carousel-fade .carousel-inner > .item.prev.right,
+    .carousel-fade .carousel-inner > .item.active {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+}
 .carousel{
   height: auto;
   width: 100%;
