--- a/assets/css/beranda-style.scss
+++ b/assets/css/beranda-style.scss
@@ -91,6 +91,70 @@ h2:before, h2:after {
 //------------------------------------------------------------------------------
 
 // LIHAT-GALERI ----------------------------------------------------------------
+.grid-1 {
+	display: grid;
+	grid-template-columns: 50% 1fr 1fr;
+	grid-template-rows: 50px 100px 50px;
+}
+
+.grid-1 {
+	grid-gap: 2px;
+}
+
+.grid-2 {
+	grid-gap: .5rem;
+}
+
+.grid-3 {
+	grid-gap: 4%;
+}
+
+.grid-4 {
+	grid-gap: 1fr; // not supported
+}
+
+
+
+// Color Variables for demo
+
+$g1-color-1: hsl(170, 32%, 53%);
+$g1-color-2: complement($g1-color-1);
+
+$steps: 5;
+
+// Mix colors to go from $color-1 ro @color-2 with 9 total steps
+@for $i from 0 to $steps {
+	grid-inner:nth-of-type(#{$i + 1}) {
+		background: mix($g1-color-1, $g1-color-2, percentage($i / ($steps - 1)));
+	}
+}
+
+grid-inner {
+	&:first-of-type {
+		//	grid-column-start: 1;
+		//	grid-column-end: 2;
+		// grid-column is short-hand for the above two properties
+		grid-column: 1 / 2;
+
+		// grid-row-start: 1;
+		// grid-row-end: 4;
+		// grid-row is short-hand for the above two properties
+		grid-row: 1 / 3;
+	}
+
+	// start div 2 at the second grid line and end at the 4th grid line
+	// only in row 1
+	&:nth-of-type(2) {
+		grid-column: 2 / 4;
+		grid-row: 1;
+	}
+
+	// start 5th grid item on grid line 1 and end on line 4
+	&:nth-of-type(5) {
+		grid-column: 1 / 4;
+		grid-row: 3;
+	}
+}
 .col-kunjungi-galeri{
   padding-top: 50px;
 }
