--- a/assets/css/beranda-style.scss
+++ b/assets/css/beranda-style.scss
@@ -1,7 +1,10 @@
 //GENERAL-----------------------------------------------------------------------
 $warnaUngu : #ac59f9;
+*,*:before,*:after{
+  box-sizing: border-box;
+}
 .container{
-    min-width: 90%;
+  min-width: 95%;
   //margin: auto;
 }
 .garis:after{
@@ -40,6 +43,9 @@ h2:before, h2:after {
   background: -ms-linear-gradient(#aaa, #aaa) repeat-x left center;
   background: linear-gradient(#aaa, #aaa) repeat-x left center;
   background-size: 1px 1px;
+  left: 100%;
+  right: 100%;
+  margin-left: 0px;
 }
 .row {
   vertical-align: middle;
@@ -62,6 +68,8 @@ h2:before, h2:after {
 
 // LAYANAN ---------------------------------------------------------------------
 .layanan{
+  box-shadow: 0 3px 6px rgba(0,0,0, 0.5),
+0 -3px 6px rgba(0,0,0, 0.5);
   h3{
      font-weight: 800;
      color: #fff;
@@ -86,86 +94,31 @@ h2:before, h2:after {
       font-weight: 400;
     }
   }
+
 }
 
 //------------------------------------------------------------------------------
 
 // LIHAT-GALERI ----------------------------------------------------------------
-.grid-1 {
-	display: grid;
-	grid-template-columns: 50% 1fr 1fr;
-	grid-template-rows: 50px 100px 50px;
-}
-
-.grid-1 {
-	grid-gap: 2px;
-}
-
-.grid-2 {
-	grid-gap: .5rem;
-}
-
-.grid-3 {
-	grid-gap: 4%;
-}
-
-.grid-4 {
-	grid-gap: 1fr; // not supported
-}
-
-
-
-// Color Variables for demo
-
-$g1-color-1: hsl(170, 32%, 53%);
-$g1-color-2: complement($g1-color-1);
-
-$steps: 5;
-
-// Mix colors to go from $color-1 ro @color-2 with 9 total steps
-@for $i from 0 to $steps {
-	grid-inner:nth-of-type(#{$i + 1}) {
-		background: mix($g1-color-1, $g1-color-2, percentage($i / ($steps - 1)));
-	}
-}
-
-grid-inner {
-	&:first-of-type {
-		//	grid-column-start: 1;
-		//	grid-column-end: 2;
-		// grid-column is short-hand for the above two properties
-		grid-column: 1 / 2;
-
-		// grid-row-start: 1;
-		// grid-row-end: 4;
-		// grid-row is short-hand for the above two properties
-		grid-row: 1 / 3;
-	}
-
-	// start div 2 at the second grid line and end at the 4th grid line
-	// only in row 1
-	&:nth-of-type(2) {
-		grid-column: 2 / 4;
-		grid-row: 1;
-	}
-
-	// start 5th grid item on grid line 1 and end on line 4
-	&:nth-of-type(5) {
-		grid-column: 1 / 4;
-		grid-row: 3;
-	}
-}
 .col-kunjungi-galeri{
+  //position: absolute;
+  box-shadow: -3px 0px 0px 0px rgba(0,0,0, 0.5);;
+  p{
+    font-size: 2.2em;
+  }
   padding-top: 50px;
-}
-.col-kunjungi-galeri,.col-foto-galeri{
   height: 400px;
 }
-*,*:before,*:after{
-  box-sizing: border-box;
+.col-foto-galeri{
+  height: 400px;
+  background: url("../../img/gambar-collation.jpg") ;
+  background-size: cover;
+  margin-top: 0px;
+  z-index: 0;
+  //position: absolute;
 }
 .lihat-galeri{
-  height: 400px;
+  min-height: 400px;
   p{
     font-weight: 800;
     margin: 0px !important;
@@ -297,10 +250,14 @@ grid-inner {
 //------------------------------------------------------------------------------
 
 // CAROUSEL --------------------------------------------------------------------
+#newCarousel{
+  box-shadow: 0 3px 6px rgba(0,0,0, 0.5);
+}
 .carousel-fade .carousel-inner .item {
   opacity: 0;
   transition-property: opacity;
     overflow:hidden;
+
 }
 .item.active img {
     transition: transform 5000ms linear 0s;
@@ -499,20 +456,26 @@ height: 500px;
 
 // TESTIMONI--------------------------------------------------------------------
 .testimonial{
+  position: relative;
+  background: #2e2635;
   padding-top: 50px;
   padding-bottom:50px;
+  box-shadow: 0 3px 6px rgba(0,0,0, 0.5),
+0 -3px 6px rgba(0,0,0, 0.5);
   h1{
+    color: #fff;
     font-weight: bold;
     margin-bottom: 20px;
   }
   .lead{
     line-height: 2em;
-    margin-bottom: 10px
+    margin-bottom: 10px;
+    color: #fff;
   }
   span{
     font-size: 18px;
     font-weight: bold;
-    color:$warnaUngu;
+    color:#fff;;
   }
   .testi{
     min-height: 100px;
@@ -524,6 +487,7 @@ height: 500px;
     padding-top: 20px;
 
     li{
+        color: #fff;
         text-indent: 0;
         width: 80px;
         height: 80px;
@@ -552,11 +516,6 @@ height: 500px;
 }
 
 // GALERI-----------------------------------------------------------------------
-.col-md-4, .col-sm-6{
-  //padding-left: 0px;
-  //padding-right: 0px;
-  //margin: 7.5px;
-}
 
 .img-wrapper
 {
@@ -700,7 +659,16 @@ height: 500px;
 //------------------------------------------------------------------------------
 
 // PESAN -----------------------------------------------------------------------
+//------------------------------------------------------------------------------
 
+// LOKASI ----------------------------------------------------------------------
+#map{
+  margin-top: 50px;
+  min-height: 300px;
+  max-height: 300px;
+  margin-bottom: 50px;
+}
+//------------------------------------------------------------------------------
 
 // FOOTER ----------------------------------------------------------------------
 #footer {
@@ -715,7 +683,16 @@ height: 500px;
     color: rgba(255,255,255,0.25);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 }
-
+.dark #quote {
+    background-color: rgba(0,0,0,0.6);
+    color: rgba(255,255,255,0.25);
+    //text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+    p{
+      font-family: 'Great Vibes', cursive;
+      font-size: 3.2em;
+      color: #fff;
+    }
+}
 
 
 #footer .footer-widgets-wrap {
@@ -806,9 +783,10 @@ height: 500px;
 }
 //------------------------------------------------------------------------------
 
-// BLOG-------------------------------------------------------------------------
+// ARTICLE-------------------------------------------------------------------------
 
 .judul-blog{
+  font-family: 'Alex Brush', cursive;
   margin-bottom: 5px;
   font-size: 40px;
   color: red;
@@ -819,6 +797,7 @@ height: 500px;
   margin: 0 auto;
 }
 .blog-post{
+  font-family: 'Vollkorn', serif;
   margin-top: 20px;
   p{
     margin-left: 70px;
