--- a/assets/css/beranda-style.scss
+++ b/assets/css/beranda-style.scss
@@ -3,6 +3,9 @@ $warnaUngu : #ac59f9;
 *,*:before,*:after{
   box-sizing: border-box;
 }
+span,p, h3, h2,{
+  font-family: 'PT Sans', sans-serif;
+}
 .container{
   min-width: 95%;
   //margin: auto;
@@ -69,13 +72,13 @@ h2:before, h2:after {
 // LAYANAN ---------------------------------------------------------------------
 .layanan{
   box-shadow: 0 3px 6px rgba(0,0,0, 0.5),
-0 -3px 6px rgba(0,0,0, 0.5);
+  0 -3px 6px rgba(0,0,0, 0.5);
+  background: url("../../img/layanan-bg.jpg") fixed;
+  background-size: cover;
   h3{
      font-weight: 800;
      color: #fff;
    }
-
-  background: #2e2635;
   .thumbnail {
     position: relative;
     padding: 0px;
