--- a/assets/css/beranda-style.scss
+++ b/assets/css/beranda-style.scss
@@ -559,7 +559,9 @@ height: 500px;
 }
 
 // GALERI-----------------------------------------------------------------------
-
+.galeri{
+  margin-top: 50px;
+}
 .img-wrapper
 {
   align-items:center;
@@ -873,6 +875,9 @@ height: 500px;
 .article-more{
   .row{
     margin-bottom: 10px;
+  }
+  p{
+    font-size: 20px;
   }
 }
 //------------------------------------------------------------------------------
